[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/characters/monsters/GrandmasterWarlockIdle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Entity/Enemies/VLog.gd" type="Script" id=2]
[ext_resource path="res://HitAndHurtBoxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Player/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/UI/EvilHealth.gd" type="Script" id=5]
[ext_resource path="res://Assets/ui/fulIHeartEvil.png" type="Texture" id=6]
[ext_resource path="res://Assets/ui/emptyHeart.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=11]
height = 6.0

[sub_resource type="CapsuleShape2D" id=12]
radius = 9.0
height = 12.0

[node name="GenericEnemy" type="KinematicBody2D"]
collision_layer = 16385
script = ExtResource( 2 )
hoursPerKill = 40

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
frames = SubResource( 10 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
shape = SubResource( 11 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 2147483664
collision_mask = 16

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -2, -14 )
shape = SubResource( 12 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 10

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="EvilHeartControl" type="Control" parent="CanvasLayer"]
margin_left = 90.0
margin_top = 162.0
margin_right = 210.0
margin_bottom = 173.0
script = ExtResource( 5 )

[node name="EmptyHeart" type="TextureRect" parent="CanvasLayer/EvilHeartControl"]
margin_right = 120.0
margin_bottom = 11.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 2

[node name="FullHeart" type="TextureRect" parent="CanvasLayer/EvilHeartControl"]
margin_right = 120.0
margin_bottom = 11.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 2

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="display_evil_health" from="." to="CanvasLayer/EvilHeartControl" method="display_hearts"]
[connection signal="hide_evil_health" from="." to="CanvasLayer/EvilHeartControl" method="hide_hearts"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="health_changed" from="Stats" to="CanvasLayer/EvilHeartControl" method="_on_Stats_health_changed"]
[connection signal="max_health_changed" from="Stats" to="CanvasLayer/EvilHeartControl" method="_on_Stats_max_health_changed"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="Timer" to="CanvasLayer/EvilHeartControl" method="hide_hearts"]

[editable path="Hurtbox"]
